--- a/aenzbi-backend/package.json
+++ b/aenzbi-backend/package.json
@@ -7,13 +7,12 @@
     "vercel-build": "npm install && npm run build"
   },
   "dependencies": {
-    "express": "^4.17.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "mongoose": "^5.9.10",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.6.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.10"
   },
-  "devDependencies": {},
   "keywords": [],
   "author": "Ally Elvis Nzeyimana",
   "license": "MIT",
@@ -25,5 +24,6 @@
   "bugs": {
     "url": "https://github.com/allyelvis/shop/issues"
   },
-  "homepage": "https://github.com/allyelvis/shop#readme"
+  "homepage": "https://github.com/allyelvis/shop#readme",
+  "devDependencies": {}
 }
