--- a/aenzbi-backend/package.json
+++ b/aenzbi-backend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "lib": "^5.1.0",
     "mongoose": "^5.9.10"
   },
   "keywords": [],
@@ -25,6 +26,5 @@
   "bugs": {
     "url": "https://github.com/allyelvis/shop/issues"
   },
-  "homepage": "https://github.com/allyelvis/shop#readme",
-  "devDependencies": {}
+  "homepage": "https://github.com/allyelvis/shop#readme"
 }
