--- a/aenzbi-backend/package.json
+++ b/aenzbi-backend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "body-parser": "^1.19.0",
+    "compile": "^0.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
